--- a/.gitignore
+++ b/.gitignore
@@ -30,9 +30,6 @@ docker/.container.cfg
 # IDE
 **/.idea/
 **/.vscode/
-# Don't ignore the top-level .vscode directory as it is
-# used to configure VS Code settings
-!.vscode
 
 # Outputs
 **/output/*
@@ -69,3 +66,5 @@ tests/
 
 # Docker history
 .isaac-lab-docker-history
+
+**/assets/
